--- a/recipe-app/package.json
+++ b/recipe-app/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@ngrx/effects": "^14.0.0",
     "@ngrx/store": "^13.1.0",
     "@types/node": "^17.0.30",
     "bootstrap": "^3.4.1",
